# coremark-pro

./: CMakeLists.txt  Kconfig  main-args.c  prj.conf
benchmarks/core/: core_list_join.c  core_matrix.c  core_mith.c  coremark.h
workloads/core/: core.c
